<?xml version="1.0"?>
<package format="2">
  <name>planning_execution</name>
  <version>0.0.1</version>
  <description>
    Execution nodes for using the BWI Knowledge Representation.
  </description>

  <maintainer email ="gpesmazoglou@gmail.com">gpesma</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend> 
  <depend>bwi_msgs</depend> 
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sound_play</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>gringo</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
